force-app/pkozuchowskiLibrary/default/objects/ApexValidationRule__mdt/ApexValidationRule__mdt.object-meta.xml
<CustomObject>
    <label>Apex Validation Rule</label>
    <pluralLabel>Apex Validation Rules</pluralLabel>
</CustomObject>