force-app/pkozuchowskiLibrary/default/objects/ApexValidationRule__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <inlineHelpText>SObject API Name</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>